# devind-django-dictionaries

./: .coveragerc  .env.example  .flake8  .gitignore  CHANGELOG.md  db.sqlite3  pyproject-old.toml  pyproject.toml  whitelist.txt
.github/workflows/: release.yml  test.yml
devind_dictionaries/: filters.py  permissions.py
devind_dictionaries/fixtures/: budget_classification.json
devind_dictionaries/management/seed/001.devind_dictionaries/: 001.BudgetClassification.json
devind_dictionaries/migrations/: 0003_auto_20220420_1239.py
devind_dictionaries/models/: budget_classification.py  department.py
devind_dictionaries/schema/: __init__.py  filters.py  mutations.py  types.py
devind_dictionaries/schema_old/: __init__.py  mutations.py  types.py
devind_dictionaries/services/: budget_classification_services.py
devind_dictionaries/tests/: test_budget_classification.py  test_queries.py
example/: asgi.py  celery.py  schema.py  settings.py  urls.py  wsgi.py
